[package]
name = "tonlib"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
adnl = { git = "https://github.com/broxus/ton-labs-adnl.git", default-features = false }
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
base64 = "0.13"
failure = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", default-features = false }

[features]
default = ["multi-threaded"]
multi-threaded = ["adnl/multi-threaded"]
single-threaded = ["adnl/single-threaded"]
wasm = ["adnl/wasm"]
