[package]
name = "tonlib"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bb8 = "0.7"
ed25519-dalek = "1.0"
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["net"] }
thiserror = "1.0"

tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
ton_block = { git = "git://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "git://github.com/tonlabs/ton-labs-types.git" }

[dependencies.ton_api]
git = "https://github.com/broxus/ton-labs-tl.git"
branch = "original"
package = "ton_api"
default-features = false
features = ["lite_api"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
