[package]
name = "tonlib-rs"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git" }
failure = "0.1.8"
futures = "0.3.8"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

[dependencies.tonlib-sys]
path = "../tonlib-sys"
